/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates and open the template
 * in the editor.
 */
package eapli.base.colaboradormanagement.domain;

public enum Role {
    HS_Manager, HR_REP, CLIENT, USER, COLLAB;
}
