@startuml
skinparam classAttributeIconSize 0


package "Presentation" #DDDDDD {
class CollaboratorSpecificationUI{

}
}


package "Application" #DDDDDD {
class CollaboratorSpecificationController{
+create()
+addCollaborator(shortName, completeName, mechanographicNumber,\naddress, phoneNumber, birthDate)
+getRoleList()
+addRole(role)
+saveCollaborator()
}
}


package "Domain" #DDDDDD {
class Collaborator{
+create(shortName, completeName, mechanographicNumber,\naddress, phoneNumber, birthDate,Role)
}

class ShortName {
+createShortName(shortName)
-validate(shortName)
}

class CompleteName {
+createCompleteName(completeName)
-validate(completeName)
}

class NumeroMecanografico {
+createNumeroMecanografico(numeroMecanografico)
-validate(numeroMecanografico)
}

class Address {
+createAddress(address)
-validate(address)
}

class PhoneNumber {
+createPhoneNumber(phoneNumber)
-validate(phoneNumber)
}

class BirthDate {
+createBirthDate(birthDate)
-validate(birthDate)
}

class Role {
+values()
}

package Builder #DDDDDD {
class CollaboratorBuilder{
+create()
+withShortName(shortName)
+withCompleteName(completeName)
+withMechanographicNumber(mechanographicNumber)
+withAddress(address)
+withPhoneNumber(phoneNumber)
+withBirthDate(birthDate)
+withRole(Role)
+build()
}
}
}

package Persistence #DDDDDD {
class PersistenceContext{
+repositories()
}

class AppSettings{
+instance()
+getRepositoryFactory()
}

package Factory #DDDDDD {
class RepositoryFactory{
+collaborators()
+roles()
}
}

package "Repository" #DDDDDD {
class CollaboratorRepository{
+create()
+save(collaborator)
}
}

}


CollaboratorSpecificationUI ..> CollaboratorSpecificationController
CollaboratorSpecificationController ..> CollaboratorBuilder
CollaboratorSpecificationController ..> PersistenceContext

AppSettings -> RepositoryFactory : creates
PersistenceContext -> AppSettings : implements

RepositoryFactory "1" -> "1" CollaboratorRepository : has

CollaboratorRepository "1" -> "*" Collaborator : saves
CollaboratorBuilder "1" -> "*" Collaborator : creates

Collaborator "1" -> "1" ShortName : has
Collaborator "1" -> "1" CompleteName : has
Collaborator "1" -> "1" NumeroMecanografico : is identified by
Collaborator "1" -> "1" Role : has
Collaborator "1" -> "1" Address : has
Collaborator "1" -> "1" PhoneNumber : has
Collaborator "1" -> "1" BirthDate : has

@enduml